--- a/style/main.css
+++ b/style/main.css
@@ -15,20 +15,21 @@ body {
 
 @media (max-width: 375px) {
 	body {
-	  overflow-x: hidden;
-	  margin-left: 0;
-	  margin-right: 0;
-	  padding: 0;
+		overflow-x: hidden;
+		margin-left: 0;
+		margin-right: 0;
+		padding: 0;
 	}
 }
 
 h1 {
-	color: rgb(220, 220, 220);
+	color: rgb(55, 42, 32);
 }
 
 a {
 	font-style: unset;
-	color: red;
+	color: rgb(55, 42, 32);
+	text-decoration: none;
 }
 
 main {
@@ -44,6 +45,35 @@ h3 {
 }
 
 /*--------- INDEX ----------------*/
+.startside-top {
+	position: relative;
+	top: 60px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background-image: url('./../assets/images/bgr/bgr2.jpeg');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	min-height: 100vh;
+}
+
+.startside-text {
+	width: 550px;
+    height: auto;
+    background-image: url(./../assets/images/bgr/brass-long.png);
+    color: rgb(55, 42, 32);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    padding: 32px;
+	font-weight: 700;
+	box-sizing: border-box;
+}
+
 .opener-frame {
 	display: flex;
 	justify-content: center;
@@ -53,8 +83,30 @@ h3 {
 	padding: 16px;
 	width: 600px;
 	height: auto;
-	background-color: antiquewhite;
-	color: black;
+	background-color: none;
+}
+
+.startside-btns {
+	width: fit-content;
+    height: auto;
+	color: rgb(55, 42, 32);
+}
+
+#startBtn {
+	position: relative;
+    width: 220px;
+    height: 100px;
+	background-image: url(./../assets/images/bgr/iron-long-cross.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	font-weight: 900;
+}
+#startBtn a {
+position: absolute;
 }
 
 .all-chains {
