--- a/style/main.css
+++ b/style/main.css
@@ -61,15 +61,15 @@ h3 {
 
 .startside-text {
 	width: 550px;
-    height: auto;
-    background-image: url(./../assets/images/bgr/brass-long.png);
-    color: rgb(55, 42, 32);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    padding: 32px;
+	height: auto;
+	background-image: url(./../assets/images/bgr/brass-long.png);
+	color: rgb(55, 42, 32);
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	display: flex;
+	flex-direction: column;
+	padding: 32px;
 	font-weight: 700;
 	box-sizing: border-box;
 }
@@ -88,25 +88,26 @@ h3 {
 
 .startside-btns {
 	width: fit-content;
-    height: auto;
+	height: auto;
 	color: rgb(55, 42, 32);
 }
 
 #startBtn {
 	position: relative;
-    width: 220px;
-    height: 100px;
+	width: 220px;
+	height: 100px;
 	background-image: url(./../assets/images/bgr/iron-long-cross.png);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	font-weight: 900;
 }
+
 #startBtn a {
-position: absolute;
+	position: absolute;
 }
 
 .all-chains {
@@ -151,6 +152,42 @@ position: absolute;
 	z-index: 50;
 	padding-top: 80px;
 	padding-bottom: 80px;
+}
+
+.popup-rules {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 80%;
+    max-height: 80vh; /* Maximale Höhe auf 80% der Viewport-Höhe begrenzen */
+    margin: auto;
+    top: 60px;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    overflow: hidden; /* Verhindert, dass das Popup selbst scrollbar wird */
+}
+
+.menu-item{
+	color: rgba(44, 44, 44, 0.5);
+}
+
+.game-description {
+    overflow: auto; /* Ermöglicht Scrollen des Textinhalts */
+    max-height: 70vh; /* Höhe des scrollbaren Bereichs festlegen */
+    padding-right: 10px; /* Platz für den Scrollbar schaffen */
+}
+
+
+.popup-close {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+	width: 40px;
+	height: auto;
+	z-index: 1001; 
 }
 
 .allCards {
