--- a/style/nav.css
+++ b/style/nav.css
@@ -40,9 +40,10 @@ nav {
 }
 
 .game-goal {
-display: flex;
-flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
+
 .num-picker {
   display: flex;
   margin: 0 8px;
@@ -52,7 +53,8 @@ flex-direction: column;
 .num-picker button {
   color: #f5deb3;
   background-color: rgb(84, 83, 83);
-  cursor: pointer;;
+  cursor: pointer;
+  ;
 }
 
 .nav-btns {
@@ -99,7 +101,6 @@ flex-direction: column;
 
 .nav-right {
   width: fit-content;
-  margin-right: 80px;
   display: flex;
   align-items: center;
 }
@@ -122,96 +123,6 @@ flex-direction: column;
   height: 32px !important;
 }
 
-#menu {
-  position: absolute;
-  width: 100px;
-  margin: -100px 0 0 210px;
-  padding: 20px;
-  padding-top: 125px;
-  background: #ededed;
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-  transform-origin: 100% 0%;
-  transform: translate(100%, 0);
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-}
-
-#menuToggle {
-  display: block;
-  position: absolute;
-  top: 20px;
-  right: 230px;
-  z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
-  cursor: pointer;
-}
-
-#menuToggle span {
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  right: -200px;
-  background: #232323;
-  border-radius: 3px;
-  z-index: 1;
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-}
-
-.menuToggle ul {
-  position: relative;
-  left: -80px;
-}
-
-
-#menuToggle a {
-  text-decoration: none;
-  color: #232323;
-  transition: color 0.3s ease;
-}
-
-#menuToggle a:hover {
-  color: tomato;
-}
-
-
-#menuToggle span:first-child {
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2) {
-  transform-origin: 0% 100%;
-}
-
-/* Transform span zu 'X' wenn Menü geöffnet ist */
-#menuToggle.open span:first-child {
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-#menuToggle.open span:nth-last-child(3) {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-#menuToggle.open span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-#menu li {
-  padding: 10px 0;
-  font-size: 22px;
-}
-
-/* Menü anzeigen, wenn es die Klasse 'open' hat */
-#menu.open {
-  transform: none;
-}
-
-
 .sideInfo {
   display: flex;
   flex-direction: column;
@@ -222,4 +133,46 @@ flex-direction: column;
   transform-origin: left top;
   width: 100vh;
   z-index: 10;
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+}
+
+.menu {
+  display: none;
+  position: absolute;
+  top: 60px;
+  right: 32px;
+  background-color: #f5deb3;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  flex-direction: column;
+  width: 120px;
+  height: auto;
+}
+
+.menu.show {
+  display: flex; /* Show the menu when 'show' class is added */
+}
+
+.menu a {
+  padding: 12px 16px;
+  text-decoration: none;
+  color: rgba(44, 44, 44, 0.5);
+  display: block;
+}
+
+.menu a:hover {
+  background-color: #555;
+  color:  #f5deb3;
+}
+
+/* Optional: Transition for smoothness */
+.menu {
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.menu.show {
+  opacity: 1;
+  visibility: visible;
 }
