--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,5 @@
-body {
+body, 
+html {
 	position: relative;
 	text-align: center;
 	background-color: black;
@@ -36,7 +37,8 @@ main {
 	position: relative;
 	height: 100vh;
 	width: 100%;
-	;
+	display: flex;
+	flex-direction: column;
 }
 
 h3 {
@@ -154,40 +156,57 @@ h3 {
 	padding-bottom: 80px;
 }
 
+/* add to body */
 .popup-rules {
-    display: flex;
+	display: flex;
     flex-direction: column;
     position: absolute;
-    width: 80%;
-    max-height: 80vh; /* Maximale Höhe auf 80% der Viewport-Höhe begrenzen */
-    margin: auto;
-    top: 60px;
-    background-color: white;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.403);
+    padding: 0 48px;
+    box-sizing: border-box;
     z-index: 1000;
-    overflow: hidden; /* Verhindert, dass das Popup selbst scrollbar wird */
+    overflow: hidden;
 }
 
-.menu-item{
-	color: rgba(44, 44, 44, 0.5);
-}
-
+/* add to body in popup-rules*/
 .game-description {
-    overflow: auto; /* Ermöglicht Scrollen des Textinhalts */
-    max-height: 70vh; /* Höhe des scrollbaren Bereichs festlegen */
-    padding-right: 10px; /* Platz für den Scrollbar schaffen */
+	margin: 40px 0 24px 0px;
+    overflow: auto;
+    height: 100%;
+    padding-right: 10px;
+    background-color: white;
+    padding: 60px 32px 32px 32px;
+    text-align: left;
 }
 
+.game-description::-webkit-scrollbar {
+    width: 10px;
+}
 
+.game-description::-webkit-scrollbar-track {
+    background: transparent;
+    margin-top: 20px; /* Abstand oben */
+    margin-bottom: 20px; /* Abstand unten */
+}
+
+.game-description::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+/* add to body in popup-rules*/
 .popup-close {
 	position: absolute;
-	top: 10px;
-	right: 10px;
+	top: 64px;
+	right: 64px;
 	cursor: pointer;
 	width: 40px;
 	height: auto;
-	z-index: 1001; 
+	z-index: 1001;
 }
 
 .allCards {
