--- a/style/table.css
+++ b/style/table.css
@@ -1,9 +1,3 @@
-main {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-}
-
 .name {
   margin: 4px 0px;
   border-radius: 50%;
@@ -98,44 +92,54 @@ main {
 }
 
 .table-frame {
-  width: 100%;
-  height: 100vh;
-  overflow-y: auto;
-  top: 40px;
-  overflow-y: auto;
-  flex-grow: 1;
+  top: 60px;
+  /*minus header*/
+  height: calc(100vh - 60px);
 }
 
 .table-mirror-frame {
   left: 28px;
-  width: 100%;
+  width: calc(100vh - 60px);
   height: 100vh;
   overflow-y: auto;
 }
 
 .table-frame,
 .table-mirror-frame {
-  position: fixed;
+  position: absolute;
+  width: 100%;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: url('./../assets/images/bgr/bgr.jpeg');
+  background-image: url(./../assets/images/bgr/bgr.jpeg);
   background-size: cover;
-  /* Skaliert das Bild, sodass es den gesamten Bereich ausfüllt */
   background-position: center;
-  /* Zentriert das Bild */
   background-repeat: no-repeat;
-  /* Verhindert, dass das Bild wiederholt wird */
-  min-height: 100vh;
-  /* Stellt sicher, dass main mindestens die Höhe des Viewports einnimmt */
+}
+
+.inner-table {
+  position: relative;
+  width: 100%;
+  height: fit-content;
+  min-height: 96%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .table-top,
 .table-bottom {
+  width: 100%;
+  height: 40%;
   display: flex;
-  justify-content: flex-end;
+  flex: 0 0 40%;
+  justify-content: center;
   align-items: center;
+  gap: 40px;
 }
 
 
@@ -149,6 +153,7 @@ main {
   height: auto;
   margin: 8px 0;
   display: flex;
+  flex: 1 0 auto;
   justify-content: space-between;
   align-items: center;
   background-color: transparent;
@@ -162,23 +167,25 @@ main {
   margin: 0 32px;
 }
 
-.shimmering-gold {
+/*.shimmering-gold {
   background: linear-gradient(45deg, #FFD700, #FFC107, #FFD700);
-  /* Goldene Farbtöne im Verlauf */
+  /* Goldene Farbtöne im Verlauf 
   background-size: 200% 200%;
-  /* Größerer Hintergrund, um die Animation zu ermöglichen */
+  /* Größerer Hintergrund, um die Animation zu ermöglichen 
   box-shadow: 0 4px 8px rgba(255, 223, 0, 0.5), 0 0 20px rgba(255, 215, 0, 0.7);
-  /* Glanz-Effekt */
+  /* Glanz-Effekt 
   border-radius: 20%;
-}
+}*/
 
 .accord-zone {
   position: relative;
+  flex: 0 0 40%;
   width: 40%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 3%;
 }
 
 .circle-img {
@@ -187,29 +194,22 @@ main {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   position: relative;
-  width: 240px;
-  height: 240px;
+  width: 160px;
+  height: 160px;
 }
 
-.bgr-circle-l,
-.bgr-circle-r {
+.bgr-circle {
   position: absolute;
-  width: 200px;
-  height: 200px;
-  background-color: rgba(255, 217, 0, 0.333);
-  box-shadow: 0px 0px 16px 6px rgba(255, 217, 0, 0.333);
+  top: 0px;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, 25%);
+  width: 70%;
+  height: 70%;
+  background-color: rgba(255, 217, 0, 0.3);
+  box-shadow: 0px 0px 16px 6px rgba(255, 217, 0, 0.3);
   border-radius: 100%;
-  z-index: 1;
-}
-
-.bgr-circle-l {
-  left: 18px;
-  top: 38px;
-}
-
-.bgr-circle-r {
-  right: -18px;
-  top: 38px;
+  z-index: 0;
 }
 
 /*.chain */
@@ -232,7 +232,6 @@ main {
   object-fit: cover;
   border-radius: 10px;
   padding: 20px;
-  /* Unsichtbares Padding für größeren Hover-Bereich */
   box-sizing: content-box;
 }
 
@@ -242,7 +241,7 @@ main {
 .top-zone {
   position: relative;
   right: 0;
-  /* width: 70%;*/
+  /* width: 70%; */
   height: 100%;
   display: flex;
   justify-content: center;
@@ -250,8 +249,21 @@ main {
   flex-direction: column;
 }
 
+.top-zone {
+  top: 32px;
+}
+
+.bottom-zone{
+  top: -32px;
+}
+
 .pl-card-frame {
+  display: flex;
   margin: 0 12px;
+  width: 8vw;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .card-group {
@@ -452,6 +464,7 @@ img {
 .brass-plate {
   background-image: url('./../assets/images/bgr/brass-plate.png');
   color: rgb(55, 42, 32);
+  min-width: 60px;
 }
 
 .small-font {
@@ -476,8 +489,8 @@ img {
 
 .brass-gear3 {
   position: absolute;
-  left: 0px;
-  bottom: -12px;
+  right: -24px;
+  z-index: 12;
 }
 
 .iron-circle {
@@ -541,4 +554,31 @@ img {
   background-color: rgb(198, 29, 29);
   border-radius: 10px;
   margin: 5px;
+}
+
+@media (max-width: 1400px) {
+  .small-font {
+    font-size: 12px;
+  }
+
+  .table-top,
+.table-bottom {
+  width: 90%;
+
+  /*
+  
+  height: 40%;
+  display: flex;
+  flex: 0 0 40%;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  */
+}
+
+body.mirror-view .table-top {
+  top: 32px;
+  position: relative;
+}
+
 }
