--- a/style/main.css
+++ b/style/main.css
@@ -106,6 +106,7 @@ h3 {
 	justify-content: center;
 	align-items: center;
 	font-weight: 900;
+	cursor: pointer;
 }
 
 #startBtn a {
@@ -253,3 +254,53 @@ h3 {
 	right: -96%;
 	width: 30px;
 }
+
+/*------------POPUP FOR NAMEINPUT ______________*/
+
+/* Popup Overlay Styles */
+.popup-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.6);
+	display: flex; /* Jetzt sichtbar */
+	justify-content: center;
+	align-items: center;
+  }
+  
+  .popup-window {
+	padding: 12px;
+    background-image: url(./../assets/images/bgr/steam-punk-frame1.png);
+    color: rgb(55, 42, 32);
+    width: 70vw;
+    height: 70vw;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-window h2 {
+	margin-top: 0;
+	color: #ead0ae;
+  }
+  
+  .popup-window input {
+	width: 50%;
+    margin: 10px;
+    padding: 8px;
+	border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  .popup-window button {
+	margin: 10px 20px;
+	cursor: pointer;
+  }
+  
