--- a/style/nav.css
+++ b/style/nav.css
@@ -162,13 +162,16 @@ nav {
   display: flex; /* Show the menu when 'show' class is added */
   opacity: 1;
   visibility: visible;
+  margin-top: 8px;
+  border-radius: 0 0 0 12px;
 }
 
 .menu a {
-  padding: 12px 16px;
+  padding: 8px 16px;
   text-decoration: none;
   color: rgba(44, 44, 44, 0.5);
   display: block;
+  text-wrap: nowrap;
 }
 
 .menu a:hover {
