--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,4 @@
-body, 
+body,
 html {
 	position: relative;
 	text-align: center;
@@ -45,6 +45,21 @@ h3 {
 	padding: 0;
 	margin: 0;
 }
+
+
+/*--------- special for cardChange curr in changeWinnerCards ----------------*/
+
+
+  .spell-overlay {
+	position: absolute;
+	top: 35%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	pointer-events: none;
+	width: 80%; 
+	height: auto;
+  }
+  
 
 /*--------- INDEX ----------------*/
 .startside-top {
@@ -160,43 +175,45 @@ h3 {
 /* add to body */
 .popup-rules {
 	display: flex;
-    flex-direction: column;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    top: 0;
-    background-color: rgba(255, 255, 255, 0.403);
-    padding: 0 48px;
-    box-sizing: border-box;
-    z-index: 1000;
-    overflow: hidden;
+	flex-direction: column;
+	position: absolute;
+	width: 100%;
+	height: 100vh;
+	margin: 0;
+	top: 0;
+	background-color: rgba(255, 255, 255, 0.403);
+	padding: 0 48px;
+	box-sizing: border-box;
+	z-index: 1000;
+	overflow: hidden;
 }
 
 /* add to body in popup-rules*/
 .game-description {
 	margin: 40px 0 24px 0px;
-    overflow: auto;
-    height: 100%;
-    padding-right: 10px;
-    background-color: white;
-    padding: 60px 32px 32px 32px;
-    text-align: left;
+	overflow: auto;
+	height: 100%;
+	padding-right: 10px;
+	background-color: white;
+	padding: 60px 32px 32px 32px;
+	text-align: left;
 }
 
 .game-description::-webkit-scrollbar {
-    width: 10px;
+	width: 10px;
 }
 
 .game-description::-webkit-scrollbar-track {
-    background: transparent;
-    margin-top: 20px; /* Abstand oben */
-    margin-bottom: 20px; /* Abstand unten */
+	background: transparent;
+	margin-top: 20px;
+	/* Abstand oben */
+	margin-bottom: 20px;
+	/* Abstand unten */
 }
 
 .game-description::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 5px;
+	background: #888;
+	border-radius: 5px;
 }
 
 /* add to body in popup-rules*/
@@ -265,42 +282,42 @@ h3 {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
-	display: flex; /* Jetzt sichtbar */
+	display: flex;
+	/* Jetzt sichtbar */
 	justify-content: center;
 	align-items: center;
-  }
-  
-  .popup-window {
+}
+
+.popup-window {
 	padding: 12px;
-    background-image: url(./../assets/images/bgr/steam-punk-frame1.png);
-    color: rgb(55, 42, 32);
-    width: 70vw;
-    height: 70vw;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .popup-window h2 {
+	background-image: url(./../assets/images/bgr/steam-punk-frame1.png);
+	color: rgb(55, 42, 32);
+	width: 70vw;
+	height: 70vw;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.popup-window h2 {
 	margin-top: 0;
 	color: #ead0ae;
-  }
-  
-  .popup-window input {
+}
+
+.popup-window input {
 	width: 50%;
-    margin: 10px;
-    padding: 8px;
+	margin: 10px;
+	padding: 8px;
 	border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  .popup-window button {
+	box-sizing: border-box;
+}
+
+.popup-window button {
 	margin: 10px 20px;
 	cursor: pointer;
-  }
-  
+}
