--- a/style/table.css
+++ b/style/table.css
@@ -310,6 +310,7 @@ img {
   align-items: center;
   flex-direction: column;
   margin-bottom: 12px;
+  font-size: 1.3em;
 }
 
 .info-text p {
@@ -408,6 +409,7 @@ img {
   flex-wrap: wrap;
   justify-content: flex-start;
   gap: 8px;
+  z-index: 2;
 }
 
 .btn-group button:hover {
@@ -440,40 +442,60 @@ img {
   cursor: pointer;
 }
 
+/********************* BUTTON STYLE ***************/
+
 .brass-long {
   padding: 20px;
   background-image: url('./../assets/images/bgr/brass-long.png');
-  color: rgb(0 0 0);
+  
   background-repeat: no-repeat;
+  filter: brightness(1.5);
+  font-family: monospace;
+  font-style: italic;
+  text-shadow:
+        1px 1px 2px rgba(255, 255, 255, 0.6), 
+        -1px -1px 2px rgba(0, 0, 0, 0.7); 
 }
 
 .brass-long-high {
   padding: 20px;
   background-image: url('./../assets/images/bgr/brass-long-high.png');
-  color: rgb(0 0 0);
+  
   background-size: cover;
   background-repeat: no-repeat;
   min-width: auto;
   min-height: auto;
+  filter: brightness(1.5);
+  font-family: monospace;
+  text-shadow:
+        1px 1px 2px rgba(255, 255, 255, 0.6), 
+        -1px -1px 2px rgba(0, 0, 0, 0.7); 
 }
 
 .brass-plate {
   padding: 12px;
   background-image: url(./../assets/images/bgr/brass-plate.png);
-  color: rgb(0 0 0);
+  
   text-wrap: nowrap;
   text-align: left;
+  filter: brightness(1.7);
+  font-style: italic;
+  font-family: monospace;
+  text-shadow:
+        1px 1px 2px rgba(255, 255, 255, 0.6), 
+        -1px -1px 2px rgba(0, 0, 0, 0.7); 
 }
 
 .small-font {
   font-size: 0.8em;
+  font-weight: 900;
 }
 
 .brass-gear1,
 .brass-gear2,
 .brass-gear3 {
   background-image: url('./../assets/images/bgr/iron-gear2.png');
-  color: rgb(55, 42, 32);
+  color: rgb(42, 34, 27);
   background-size: 32px 32px;
   background-repeat: no-repeat;
   background-position: center;
@@ -489,9 +511,9 @@ img {
 
 .brass-gear3 {
   position: absolute;
-  left: -24px;
-  bottom: -8px;
-  z-index: 12;
+    right: -24px;
+    top: -18px;
+    z-index: 12;
 }
 
 .iron-circle {
@@ -503,15 +525,23 @@ img {
 
 .iron-long-cross {
   background-image: url('./../assets/images/bgr/iron-long-cross.png');
-  color: #1e0f0f;
+  color: #210808;
   font-weight: 900;
   font-size: large;
-}
+  text-wrap: wrap;
+  width: min-content;
+  margin-right: 8px;
+  text-shadow:
+        1px 1px 2px rgba(255, 255, 255, 0.6), 
+        -1px -1px 2px rgba(0, 0, 0, 0.7); 
 
 .iron-plate {
   background-image: url('./../assets/images/bgr/iron-plate.png');
   color: #000000;
   font-weight: 700;
+  text-shadow:
+        1px 1px 2px rgba(255, 255, 255, 0.6), 
+        -1px -1px 2px rgba(0, 0, 0, 0.7); 
 }
 
 /* ------------------------- CIRCLE BOARD --------------------------- */
@@ -559,8 +589,8 @@ img {
 
 @media (max-width: 1400px) {
   .small-font {
-    font-size: 12px;
-    font-weight: 600;
+    font-size: 1.0em;
+    font-weight: 900;
   }
 
   .table-top,
