--- a/style/main.css
+++ b/style/main.css
@@ -80,7 +80,6 @@ h3 {
 }
 
 .startside-text {
-	width: 550px;
 	height: auto;
 	background-image: url(./../assets/images/bgr/brass-long.png);
 	color: rgb(55, 42, 32);
@@ -242,6 +241,11 @@ h2,
 	background-color: white;
 	padding: 60px 32px 32px 32px;
 	text-align: left;
+}
+.game-description h2 {
+	text-shadow: none;
+    text-align: center;
+    width: fit-content;
 }
 
 .game-description::-webkit-scrollbar {
