--- a/style/main.css
+++ b/style/main.css
@@ -123,24 +123,38 @@ h3 {
 	align-items: center;
 	font-weight: 900;
 	cursor: pointer;
-	filter: brightness(1.2);
-	color: #210808;
+	color: #ffe864;
+	font-size: large;
+	margin-right: 8px;
+	text-shadow: 5px 7px 2px rgb(0 0 0 / 45%);
 }
 
-
+.btn-descr {
+	margin: 0 !important;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	gap: 12px;
+	text-wrap: wrap;
+	color: #ffe864;
+	font-size: large;
+	margin-right: 8px;
+	text-shadow: 5px 7px 2px rgb(0 0 0 / 45%);
+	justify-content: space-around;
+}
 
 #popupWindow input,
 h2 {
-	text-shadow:
-		1px 1px 2px rgba(255, 255, 255, 0.6),
-		-1px -1px 2px rgba(0, 0, 0, 0.7);
+	color: #ffe864;
+	font-size: large;
+	margin-right: 8px;
+	text-shadow: 5px 7px 2px rgb(0 0 0 / 45%);
 }
 
 #popupWindow input,
 h2,
 .start-btn {
 	font-family: monospace;
-	color: #210808;
 	font-weight: 900;
 	font-size: large;
 	text-wrap: wrap;
@@ -160,14 +174,14 @@ h2,
 
 .start-btn-frame {
 	position: relative;
-	position: relative;
-    display: flex;
-    flex-direction: row;
-    gap: 12px;
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
 }
 
 .start-btn img {
 	width: 2em;
+	color: #fff;
 }
 
 .start-btn {
@@ -346,7 +360,6 @@ h2,
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
 	display: flex;
-	/* Jetzt sichtbar */
 	justify-content: center;
 	align-items: center;
 	z-index: 100;
@@ -354,7 +367,6 @@ h2,
 
 .popup-window {
 	position: absolute;
-	/* padding: 12px; */
 	background-image: url(./../assets/images/bgr/start-popup-bgr.png);
 	color: rgb(55, 42, 32);
 	width: 55vw;
