--- a/style/table.css
+++ b/style/table.css
@@ -216,7 +216,7 @@ body.mirror-view .table-top {
   transform: translate(-50%, -50%);
   width: 12px;
   height: 18px;
-  background-color: #ead0ae;
+  background-color:#cdcdcd;
   border-radius: 10px;
   margin: 5px;
 }
@@ -446,49 +446,64 @@ img {
 
 /********************* BUTTON STYLE ***************/
 
+.gradient-text {
+  color: rgb(255, 232, 100);
+  text-shadow:
+    /* 1px 1px 2px rgba(255, 255, 255, 0.6), */
+    2px 2px 2px rgba(0, 0, 0, 0.7);
+}
+
 .brass-long {
   padding: 20px;
   background-image: url('./../assets/images/bgr/brass-long.png');
-  
   background-repeat: no-repeat;
-  filter: brightness(1.5);
+  filter: brightness(1.2);
   font-family: monospace;
-  font-style: italic;
-  text-shadow:
-        1px 1px 2px rgba(255, 255, 255, 0.6), 
-        -1px -1px 2px rgba(0, 0, 0, 0.7); 
+  letter-spacing: -0.1;
+  word-spacing: -0.4;
+
+  background-image:
+    /* 1) Overlay von oben-links nach unten-rechts, deckend */
+    linear-gradient(rgba(0, 0, 0, 0.5),
+      /* halbtransparentes Schwarz */
+      rgba(0, 0, 0, 0.5)),
+    /* font-style: italic; */
 }
 
 .brass-long-high {
   padding: 20px;
   background-image: url('./../assets/images/bgr/brass-long-high.png');
-  
   background-size: cover;
   background-repeat: no-repeat;
   min-width: auto;
   min-height: auto;
-  filter: brightness(1.5);
+  filter: brightness(1.01);
   font-family: monospace;
-  text-shadow:
-        1px 1px 2px rgba(255, 255, 255, 0.6), 
-        -1px -1px 2px rgba(0, 0, 0, 0.7); 
+  /* text-shadow:
+    1px 1px 2px rgba(255, 255, 255, 0.6),
+    -1px -1px 2px rgba(0, 0, 0, 0.7); */
 }
 
 .brass-plate {
-  padding: 12px;
+  padding: 22px;
   background-image: url(./../assets/images/bgr/brass-plate.png);
-  
   text-wrap: nowrap;
-  text-align: left;
-  filter: brightness(1.7);
-  font-style: italic;
+  text-align: center;
+  /* filter: brightness(0.8); */
+  font-weight: 900;
   font-family: monospace;
-  text-shadow:
-        1px 1px 2px rgba(255, 255, 255, 0.6), 
-        -1px -1px 2px rgba(0, 0, 0, 0.7); 
+  word-spacing: -0.3em;
+  letter-spacing: -0.1em;
+  background-image:
+    /* 1) Overlay von oben-links nach unten-rechts, deckend */
+    linear-gradient(rgba(0, 0, 0, 0.5),
+      /* halbtransparentes Schwarz */
+      rgba(0, 0, 0, 0.5)),
 }
 
 .small-font {
+  color: #ffe864;
+  text-shadow: 5px 7px 2px rgb(0 0 0 / 45%);
   font-size: 0.8em;
   font-weight: 900;
 }
@@ -513,9 +528,9 @@ img {
 
 .brass-gear3 {
   position: absolute;
-    right: -24px;
-    top: -18px;
-    z-index: 12;
+  right: -24px;
+  top: -18px;
+  z-index: 12;
 }
 
 .iron-circle {
@@ -527,15 +542,14 @@ img {
 
 .iron-long-cross {
   background-image: url('./../assets/images/bgr/iron-long-cross.png');
-  color: #210808;
+  /* color: #210808; */
+  color: rgb(255, 232, 100);
   font-weight: 900;
   font-size: large;
   text-wrap: wrap;
   width: min-content;
   margin-right: 8px;
-  text-shadow:
-        1px 1px 2px rgba(255, 255, 255, 0.6), 
-        -1px -1px 2px rgba(0, 0, 0, 0.7);
+  text-shadow: 5px 7px 2px rgb(0 0 0 / 45%);
 }
 
 .iron-plate {
@@ -543,8 +557,8 @@ img {
   color: #000000;
   font-weight: 700;
   text-shadow:
-        1px 1px 2px rgba(255, 255, 255, 0.6), 
-        -1px -1px 2px rgba(0, 0, 0, 0.7); 
+    1px 1px 2px rgba(255, 255, 255, 0.6),
+    -1px -1px 2px rgba(0, 0, 0, 0.7);
 }
 
 /* ------------------------- CIRCLE BOARD --------------------------- */
@@ -594,6 +608,7 @@ img {
   .small-font {
     font-size: 1.0em;
     font-weight: 900;
+    text-wrap: auto;
   }
 
   .table-top,
