--- a/style/table.css
+++ b/style/table.css
@@ -344,14 +344,14 @@ img {
   display: none;
 }
 
-#infoWizard {
+#infoWizzard {
   display: none;
 }
 
 .chain-frame:hover .chain-helper,
 .helper-frame:hover .infoMellot,
 .helper-frame:hover .infoGoblin,
-.helper-frame:hover .infoWizard {
+.helper-frame:hover .infoWizzard {
   display: block;
 }
 
@@ -446,11 +446,30 @@ img {
 
 /********************* BUTTON STYLE ***************/
 
-.gradient-text {
+.opt-acc-text {
   color: rgb(255, 232, 100);
   text-shadow:
     /* 1px 1px 2px rgba(255, 255, 255, 0.6), */
     2px 2px 2px rgba(0, 0, 0, 0.7);
+}
+.opt-accord-item {
+  display: block;
+  margin-bottom: 0.25rem;
+}
+
+.color{
+color: #abafff;
+color: #cb9066;
+color: #9efec7;
+color: #fe4a51;
+color: #b6fe7c;
+color: #b395fb;
+color: #feaf4d;
+color: #8bb7fd;
+color: #fe88b0;
+color: #89fe50;
+color: #fe42a6;
+color: #ebfe47;
 }
 
 .brass-long {
@@ -490,7 +509,7 @@ img {
   text-wrap: nowrap;
   text-align: center;
   /* filter: brightness(0.8); */
-  font-weight: 900;
+  /* font-weight: 900; */
   font-family: monospace;
   word-spacing: -0.3em;
   letter-spacing: -0.1em;
@@ -505,7 +524,7 @@ img {
   color: #ffe864;
   text-shadow: 5px 7px 2px rgb(0 0 0 / 45%);
   font-size: 0.8em;
-  font-weight: 900;
+  /* font-weight: 900; */
 }
 
 .brass-gear1,
@@ -607,7 +626,7 @@ img {
 @media (max-width: 1400px) {
   .small-font {
     font-size: 1.0em;
-    font-weight: 900;
+    /* font-weight: 900; */
     text-wrap: auto;
   }
 
