--- a/style/main.css
+++ b/style/main.css
@@ -175,6 +175,13 @@ h2,
 .start-btn-frame {
 	position: relative;
 	display: flex;
+	flex-direction: column;
+	gap: 12px;
+}
+
+.id-btn-frame {
+	position: relative;
+	display: flex;
 	flex-direction: row;
 	gap: 12px;
 }
