--- a/style/main.css
+++ b/style/main.css
@@ -12,6 +12,7 @@ html {
 	font-family: "mono-space", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
 		"Lucida Sans", Arial, sans-serif;
 	box-sizing: border-box;
+	background-image: url(./../assets/images/bgr/bgr-slate-brass.png);
 }
 
 @media (max-width: 375px) {
@@ -31,6 +32,12 @@ a {
 	font-style: unset;
 	color: rgb(55, 42, 32);
 	text-decoration: none;
+}
+
+header {
+	position: relative;
+	width: 100%;
+	height: 80px;
 }
 
 main {
@@ -66,10 +73,10 @@ h3 {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	background-image: url('./../assets/images/bgr/bgr2.jpeg');
+	/* background-image: url('./../assets/images/bgr/bgr2.jpeg');
 	background-size: cover;
 	background-position: center;
-	background-repeat: no-repeat;
+	background-repeat: no-repeat; */
 	min-height: 100vh;
 	text-shadow:
 		1px 1px 2px rgba(255, 255, 255, 0.6),
@@ -148,7 +155,7 @@ h2 {
 	color: #ffe864;
 	font-size: large;
 	margin-right: 8px;
-	text-shadow: 5px 7px 2px rgb(0 0 0 / 45%);
+	/* text-shadow: 5px 7px 2px rgb(0 0 0 / 45%); */
 }
 
 #popupWindow input,
@@ -192,19 +199,25 @@ h2,
 }
 
 .start-btn {
-	width: 40px;
-	height: 32px;
+	min-width: 3em;
+	height: auto;
 	border-radius: 10px;
 	display: flex;
 	justify-content: center;
-}
-
-.popup-window .start-btn {
+	padding: 4px;
+	box-sizing: border-box;
 	box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.8);
 	background-size: initial;
 	border-radius: 2px;
 	border: none;
 }
+
+/* .popup-window .start-btn {
+	box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.8);
+	background-size: initial;
+	border-radius: 2px;
+	border: none;
+} */
 
 .all-chains {
 	display: none;
@@ -365,7 +378,8 @@ h2,
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.6);
+	/* background-color: rgba(0, 0, 0, 0.6); */
+	background-image: url(./../assets/images/bgr/bgr-slate-brass.png);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -374,7 +388,7 @@ h2,
 
 .popup-window {
 	position: absolute;
-	background-image: url(./../assets/images/bgr/start-popup-bgr.png);
+	/* background-image: url(./../assets/images/bgr/start-popup-bgr.png); */
 	color: rgb(55, 42, 32);
 	width: 55vw;
 	height: 55vw;
